// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col /> with added props should match snapshot with props 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  -webkit-flex: 2 3 75%;
  -ms-flex: 2 3 75%;
  flex: 2 3 75%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 .brckwrx-row {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

<div
  className="brckwrx-col c0"
  order={2}
/>
`;

exports[`<Col /> with default props/settings should match snapshot 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c0 .brckwrx-row {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

<div
  className="brckwrx-col c0"
/>
`;

exports[`<Col /> with the grid prop should match snapshot 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 !important;
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) {
  padding-top: calc(1em / 2);
  padding-bottom: calc(1em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-row {
  padding-left: calc(1em / 2);
  padding-right: calc(1em / 2);
}

.c0:not(.brckwrx-row) :not(.brckwrx-col) .brckwrx-col {
  padding: calc(1em / 2);
}

.c0 .brckwrx-row {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

<div
  className="brckwrx-col c0"
/>
`;
